--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,18 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>moving icons</title>
+		<meta name="description" content="beautifully crafted, moving icons. for svelte." />
+		<meta property="og:title" content="moving icons" />
+		<meta property="og:description" content="beautifully crafted, moving icons. for svelte." />
+		<!-- <meta
+		property="og:image"
+		content=""
+	/> -->
+		<meta property="og:url" content="https://movingicons.dev" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta property="og:type" content="website" />
+		<meta property="og:site_name" content="moving icons" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
