add: meta image

--- a/src/app.html
+++ b/src/app.html
@@ -8,10 +8,7 @@
 		<meta name="description" content="beautifully crafted, moving icons. for svelte." />
 		<meta property="og:title" content="moving icons" />
 		<meta property="og:description" content="beautifully crafted, moving icons. for svelte." />
-		<!-- <meta
-		property="og:image"
-		content=""
-	/> -->
+		<meta property="og:image" content="https://movingicons.dev/meta.png" />
 		<meta property="og:url" content="https://movingicons.dev" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta property="og:type" content="website" />
